--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "css-loader": "^3.5.3",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
